--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 **/.next/
 **/out/
 **/next.config.mjs
-**/README.md
+my-app/README.md
 
 # production
 **/build
@@ -47,5 +47,3 @@
 **/tailwind.config.mjs
 **/package-lock.json
 **/jsconfig.json
-
-**/README.md
